# SQP-OptimalControls

./: CMakeLists.txt  README.md
examples/: cartpole_demo.cpp  demo.cpp  linear_function.cpp  nonlinear_function.cpp  nonlinear_function2.cpp  pendulum_demo.cpp
include/: cartpole.hpp  pendulum.hpp
simulation/Pendulum/: Pendulum.pde  slack_mag_data.temp  slack_theta_data.tmp  theta_data.tmp
src/: cartpole.cpp  pendulum.cpp
